--- a/Noëmie.html
+++ b/Noëmie.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <title>Curriculum vitae</title>
-  <link rel="stylesheet" href="noëmie.css">
+  <link rel="stylesheet" href="noëmiee.css">
 </head>
 <body>
   <div>
