--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ Maintient une bonne ambiance dans l’équipe.<br>
 Propose des idées pour améliorer le projet.<br>
 </details><br>
 
-<button><a href="valisoa.html">Helson</a></button>
+<button><a href="helson.html">helson</a></button>
       </div>
     <div class="card">
 
