Update image source in helson.html

--- a/helson.html
+++ b/helson.html
@@ -10,7 +10,7 @@
     <header>
         <h1>valisoa helson RAZAFIMANDIMBY</h1>
         <p>Etudiant en informatique </p>
-        <img src="helson.jpg" width="400" height="400">
+        <img src="helsone.jpg" width="400" height="400">
     </header>
     <section>
         <h2>A propos de moi</h2>
