Update image source and dimensions in helson.html

--- a/helson.html
+++ b/helson.html
@@ -10,7 +10,7 @@
     <header>
         <h1>valisoa helson RAZAFIMANDIMBY</h1>
         <p>Etudiant en informatique </p>
-        <img src="helsone.jpg" width="200px" height="200px">
+        <img src="Helson.jpg" width="350px" height="350px">
     </header>
     <section>
         <h2>A propos de moi</h2>
